src/stylesheets/fcc-test-ui.css
#fcc_foldout_menu_inner {
  display: flex;
  justify-content: space-around;
  flex-flow: row wrap;
  padding: 30px 10px 10px;
}

#fcc_foldout_menu_inner label {
  font-size: 15px;
}

#fcc_foldout_menu_inner select {
  background-color: buttonface;
  border: 1px solid;
  border-color: rgb(169, 169, 169);
  font-size: 12px;
  flex: 1 100%;
  margin: 10px 15px;
  text-align: left;
}

#fcc_foldout_menu_inner #fcc_report-bug {
  display: block;
  cursor: pointer;
}

button.fcc_foldout_button {
  background-color: rgba(128, 128, 128, 0.7);
  border: none;
  border-radius: 4px;
  box-shadow: 1px 1px 4px black;
  box-sizing: content-box;
  color: white;
  cursor: pointer;
  display: block;
  font-size: 15px;
  height: 20px;
  margin: 0 5px 10px;
  padding: 10px;
  text-align: center;
  width: 110px;
}

#fcc_test_message-box-rerun-button {
  transition: all .3s;
}

#fcc_test_message-box-rerun-button:hover {
  color: white;
  background-color: black;
}

button.fcc_test_btn-default {
  background-color: rgba(128, 128, 128, 0.7);
}

button.fcc_test_btn-executing {
  background-color: rgba(255, 153, 0, 0.9);
}

button.fcc_test_btn-error {
  background-color: rgba(255, 0, 0, 0.7);
}

button.fcc_test_btn-success {
  background-color: rgba(81, 211, 81, 0.9);
}

#fcc_report-bug {
  font-size: 12px;
}

#fcc_legend_wrapper {
  width: 125px;
  text-align: left;
  font-size: 15px;
  padding: 5px 0;
}

#fcc_legend_wrapper span {
  height: 15px;
  margin-top: 6px;
  font-size: 12px ;
  color: black;
}

div.fcc_legend.key {
  height: 15px;
  width: 15px;
  margin: 5px;
  vertical-align: top;
}

div.fcc_legend.key:first-of-type {
  background-color: rgba(255, 0, 0, 0.7);
}

div.fcc_legend.key:nth-of-type(2) {
  background-color: rgba(81, 211, 81, 0.9);
}

div.fcc_legend.key:nth-of-type(3) {
  background-color: rgba(255, 153, 0, 0.9);
}

div.fcc_legend, span.fcc_legend {
  display: inline-block;
}

div.fcc_test_ui {
  position: fixed;
  left: 0;
  top: 0;
}

